--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,10 +11,12 @@
     <color name="yellowAlpha">#B3FEC740</color>
     <color name="yellowDark">#CAA13D</color>
     <color name="yellowDarkAlpha">#E6CAA13D</color>
+    <color name="green">#86BF3E</color>
     <color name="grafit">#333333</color>
     <color name="light_blue_600">#FF039BE5</color>
     <color name="light_blue_900">#FF01579B</color>
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+
 </resources>
