--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,10 @@
         <item name="fontFamily">@font/martel_regular</item>
         <item name="color">@color/white</item>
     </style>
+    <style name="buttonTextAppearance">
+        <item name="fontFamily">@font/martel_regular</item>
+        <item name="android:textSize">16sp</item>
+    </style>
 
     <style name="servingTextAppearance">
         <item name="android:textSize">10sp</item>
@@ -36,6 +40,10 @@
         <item name="android:textSize">14sp</item>
         <item name="fontFamily">@font/martel_regular</item>
         <item name="color">@color/grafit</item>
+    </style>
+    <style name="smallTextAppearance">
+        <item name="android:textSize">14sp</item>
+        <item name="fontFamily">@font/martel_regular</item>
     </style>
 
     <style name="groupTextAppearance">
@@ -53,7 +61,9 @@
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
 
-
+    <style name="RoundedCornersDialog" parent="@style/Theme.MaterialComponents.Dialog">
+        <item name="dialogCornerRadius">16dp</item>
+    </style>
 
 
 </resources>
