--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="action_button_padding">4dp</dimen>
     <dimen name="content_text_margin">20dp</dimen>
     <dimen name="title_margin">10dp</dimen>
+    <dimen name="margin_go_premium">20dp</dimen>
 </resources>
