home fragment toolbar changed

--- a/app/src/main/res/menu/home_fragment_toolbar.xml
+++ b/app/src/main/res/menu/home_fragment_toolbar.xml
@@ -11,4 +11,9 @@
         android:title="@string/settings"
         android:icon="@drawable/ic_grid"
         app:showAsAction="always"/>
+    <item
+        android:id="@+id/ad_mi"
+        android:title="@string/settings"
+        android:icon="@drawable/ic_ad"
+        app:showAsAction="always"/>
 </menu>
