--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="title_margin">10dp</dimen>
     <dimen name="margin_go_premium">20dp</dimen>
     <dimen name="margin_menu_item_toolbar_home">16dp</dimen>
+    <dimen name="margin_premium_label">12dp</dimen>
 </resources>
