--- a/app/src/main/res/layout/fragment_go_premium.xml
+++ b/app/src/main/res/layout/fragment_go_premium.xml
@@ -71,7 +71,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/go_premium_check_tv"
-            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent" />
+            app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent"
+            />
 
         <Button
             android:id="@+id/per_month_btn"
